# projeto-ml

./: app.py  pizzas.csv  pyproject.toml
